ajout d'une balise meta description pour Google

--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>Jld-philatelie - Achetez mes timbres francais jusqu'a 80% de remise</title>
+  <meta name="description" content="Vente de timbres jusqu'à 80% de remise sur la côte Yvert et Tellier. Je suis un philateliste et ne revends des timbres que dans le but d'étoffer ma collection.">
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
