changement du titre

--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Jld-philatelie - Achetez mes timbres francais jusqu'a 80% de remise</title>
+  <title>Jld-philatelie - Timbres francais jusqu'a 80% de remise</title>
   <meta name="description" content="JLD-Philatelie.fr - jusqu'à 80% de remise">
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
