--- a/src/index.html
+++ b/src/index.html
@@ -1,10 +1,13 @@
 <!doctype html>
-<html lang="en">
+<html lang="fr">
 
 <head>
   <meta charset="utf-8">
-  <title>Jld-philatelie - Timbres francais jusqu'a 80% de remise</title>
-  <meta name="description" content="JLD-Philatelie.fr - jusqu'à 80% de remise">
+  <title>Jld-philatelie - Timbres francais jusqu'a 80% de remise.</title>
+
+  <meta name="description" content="Vendeur particulier de timbres français, je vends mes timbres jusqu'à 80% de remise sur la côte Yvert et Tellier dans le seul but de m'acheter d'autres timbres pour étoffer ma collection.">
+  <meta property="og:description" content="Vendeur particulier de timbres français, je vends mes timbres jusqu'à 80% de remise sur la côte Yvert et Tellier dans le seul but de m'acheter d'autres timbres pour étoffer ma collection.">
+    <meta property="og:title" content="Jld-philatelie - Timbres francais jusqu'a 80% de remise.">
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
